--- a/about.html
+++ b/about.html
@@ -30,10 +30,8 @@
 	color: #00CC00;
 	font-weight: bold;
 }
-.style23 {color: #0033FF}
-.style24 {color: #003399}
-.style25 {color: #9BD4FF}
-.style26 {color: #330099}
+.style27 {color: #990000}
+.style28 {color: #003399}
 -->
 </style>
 </head>
@@ -41,38 +39,39 @@
 <body>
 <div align="center"></p>
   <img src="1692313410864.jpg" width="1036" height="471"></div>
-<p align="left"><span class="style23"><font size="5"><b><i>
-<marquee scrolldelay="0" width="522" direction="right">
-</marquee>
-
-<marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-</marquee>
-</i></b>
-      
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
-    </marquee>
-    <font size="5"><span class="style24"><span class="style13"><span class="style26"><font size="5" class="style32 style18">FEDERAL POLYTECHNIC, BIDA</font></span></span></span></font></font></span><span class="style25"><font size="5"><font size="5"><font size="5" class="style32 style18">
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
+<font size="5"><table width="1038" border="0">
+  <tr>
+    <td bgcolor="#999900"><h1>
+      <span class="style27"><span class="style21"><font size="5"><i>
+        <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+          <strong>FEDERAL POLYTECHNIC, BIDA</strong>
         </marquee>
-        </font></font><font size="5" class="style32 style18">
-        <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
-        </marquee>
-        </font>
-        </font>    </span></p>
-<hr color="#FF0000" style="color: #FF0000">
-<p align="center"><span class="style13"><span class="style16"><a href="index.html">HOME </a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="courses.html">COURSES </a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="contact.html">CONTACT US</a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="prog.html">PROGRAMMES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-      <a href="regi.html">REGISTRATION</a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;
-	  <a href="tuition.html">TUITION FEES</a>&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-      <a href="portal.html">PORTAL&nbsp;&nbsp;&nbsp;</a></span><a href="portal.html">&nbsp;&nbsp;</a></span></p>
-<div id="welcome">
-  <p align="left" class="style13"><font size="5"><em>
-    <marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-    </marquee>
-  </em></font>
-  <table width="834" border="1">
+        <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+        <strong> .........................................................................</strong>
+      </marquee>
+      </span><span class="style21 style28">
+      <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+      <strong><em>Technology For Development</em></strong>
+      </marquee>
+      </span></td>
+  </tr>
+  </table>
+</font>
+<hr align="left" color="#FF0000" style="color: #FF0000">
+<table width="941" height="21" border="0" align="center">
+  <tr>
+    <td width="86"><span class="style13"><span class="style16"><a href="about.html">A</a></span></span><span class="style16"><a href="about.html">BOUT US</a></span></td>
+    <td width="81"><span class="style16"> <a href="courses.html">COURSES</a></span></td>
+    <td width="145"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;</span></td>
+    <td width="142"><span class="style16">&nbsp; &nbsp; <a href="prog.html">PROGRAMMES</a>&nbsp;</span></td>
+    <td width="127"><span class="style16"> <a href="regi.html">REGISTRATION</a></span></td>
+    <td width="137"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="tuition.html">TUITION FEES</a></span></td>
+    <td width="106"><span class="style16"><a href="portal.html">PORTAL&nbsp;</a></span><a href="portal.html">&nbsp;&nbsp;&nbsp;</a></td>
+    <td width="83"><span class="style16"><a href="index.html">&nbsp;&nbsp;HOME&nbsp;&nbsp;</a></span></td>
+  </tr>
+</table>
+</br>
+  <table width="834" border="1" align="center">
     <tr>
       <td><p align="left" class="style13"><span class="style22">ABOUT US </span>
         <p class="style18">The Federal Polytechnic, Bida at a Glance</p>
@@ -90,15 +89,20 @@
   &nbsp;info@fedpolybida.edu.ng<br>
   &nbsp;+234 8051774016</p></td>
     </tr>
-  </table>
+</table>
   <p align="left" class="style13">
 </div>
 <span class="style15"><span class="style3"><span class="style4"><span class="style1"><b>
 <footer>
 		</span>
 <hr color="#FF0000" style="color: #660000">
-<div align="center"><span style="color: #000000"><i><b>		</span>
-    <span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span> </span></div>
+<div align="center"><span style="color: #000000"><i><b> </span>
+  <table width="1012" height="35" border="0">
+    <tr>
+      <td width="1002" bgcolor="#999900"><div align="center"><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span></span></div></td>
+    </tr>
+  </table>
+</div>
 <hr color="#FF0000" style="color: #660000">
 </body>
 
