--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>Contact Page</title>
 <bgsound src="../../Music/apala%20copy%20of%20musili.mp3" loop="-1">
 <meta name="Microsoft Theme" content="sonora 1011">
 <link href="../uni.web/css1.css" rel="stylesheet" type="text/css">
@@ -18,10 +18,6 @@
 	font-size: 12px;
 	font-style: italic;
 }
-.style18 {
-	color: #CC0000;
-	font-weight: bold;
-}
 .style19 {	color: #990000;
 	font-weight: bold;
 }
@@ -29,53 +25,61 @@
 	color: #00CC66;
 	font-weight: bold;
 }
-.style22 {font-weight: bold; font-size: 12px; color: #0072E7; }
-.style24 {color: #0072E7}
+.style25 {color: #990000}
+.style26 {color: #003399}
 -->
 </style>
 </head>
 
 <body>
-<div align="center"></p>
-  <img src="1692313410864.jpg" width="1036" height="471"></div>
-<p align="left"><font size="5"><b><i>
-<marquee scrolldelay="0" width="522" direction="right"></marquee><font color="#00FF00"><marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-</marquee>
-</font></i></b>
-    <font color="#00FF00">
-    <em>
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate"></marquee></em></font><font size="5" class="style32 style18">FEDERAL POLYTECHNIC, BIDA
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
-    </marquee>
-    </font></font></p>
-
-<hr color="#FF0000" style="color: #FF0000">
-<p align="center"><span class="style13"><span class="style16"><a href="about.html">ABOUT US</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="courses.html">COURSES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="prog.html">PROGRAMMES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="regi.html">REGISTRATION</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="tuition.html">TUITION FEES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="portal.html">PORTAL</a>&nbsp;&nbsp;<span class="style24">&nbsp;</span></span><span class="style24">&nbsp;&nbsp;</span></span><span class="style22"><a href="index.html">HOME</a></span></p>
-<div id="welcome">
-  <p align="left" class="style13"><font size="5"><em>
-    <marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-    </marquee>
-  </em></font>  
-  <table width="397" height="137" border="0">
-    <tr>
-      <td><p align="left" class="style13"><span class="style20">Contact us:</span>
-        <p> North Central, Nigeria KM 1.5,  Doko Road, Bida Niger State<br>
-  &nbsp;info@fedpolybida.edu.ng<br>
-  &nbsp;+234 8051774016</p></td>
-    </tr>
+<div align="center"></p><img src="1692313410864.jpg" width="1036" height="471"></div>
+<font size="5"><table width="1038" border="0">
+  <tr>
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
+      <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+        <strong><span class="style25">FEDERAL POLYTECHNIC, BIDA .........................................................................</span><span class="style30 style26"><em>Technology For Development</em></span></strong>
+      </marquee>
+    </span></td>
+  </tr>
   </table>
-  <p align="left" class="style13">
-</div>
+</font>
+<hr align="left" color="#FF0000" style="color: #FF0000">
+<table width="941" height="21" border="0" align="center">
+  <tr>
+    <td width="86"><span class="style13"><span class="style16"><a href="about.html">A</a></span></span><span class="style16"><a href="about.html">BOUT US</a></span></td>
+    <td width="81"><span class="style16"> <a href="courses.html">COURSES</a></span></td>
+    <td width="145"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;</span></td>
+    <td width="142"><span class="style16">&nbsp; &nbsp; <a href="prog.html">PROGRAMMES</a>&nbsp;</span></td>
+    <td width="127"><span class="style16"> <a href="regi.html">REGISTRATION</a></span></td>
+    <td width="137"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="tuition.html">TUITION FEES</a></span></td>
+    <td width="106"><span class="style16"><a href="portal.html">PORTAL&nbsp;</a></span><a href="portal.html">&nbsp;&nbsp;&nbsp;</a></td>
+    <td width="83"><span class="style16"><a href="index.html">&nbsp;&nbsp;HOME&nbsp;&nbsp;</a></span></td>
+  </tr>
+</table>
+</br>
+<table width="837" border="0" align="center">
+  <tr>
+    <td width="459"><table width="397" height="137" border="0" align="left">
+      <tr>
+        <td><p align="left" class="style13"><span class="style20">Contact us:</span>
+            <p> North Central, Nigeria KM 1.5,  Doko Road, Bida Niger State<br>
+              &nbsp;info@fedpolybida.edu.ng<br>
+              &nbsp;+234 8051774016</p></td>
+      </tr>
+    </table></td>
+    <td width="460">&nbsp;</td>
+  </tr>
+</table>
 <p><span class="style15"><span class="style3"><span class="style4"><span class="style1"><b>
   <footer>
   </span>
         <hr color="#FF0000" style="color: #660000">
-</p>
-<div align="center"><span style="color: #000000"><i><b> </span><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span> </span>
+<div align="center"><span style="color: #000000"><i><b> </span>
+  <table width="1012" height="35" border="0">
+    <tr>
+      <td width="1002" bgcolor="#999900"><div align="center"><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span></span></div></td>
+    </tr>
+  </table>
 </div>
 <hr color="#FF0000" style="color: #660000">
 </body>
