--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>Home Page</title>
 <bgsound src="../../Music/apala%20copy%20of%20musili.mp3" loop="-1">
 <meta name="Microsoft Theme" content="sonora 1011">
 <link href="../uni.web/css1.css" rel="stylesheet" type="text/css">
@@ -18,10 +18,6 @@
 	font-size: 12px;
 	font-style: italic;
 }
-.style18 {
-	color: #CC0000;
-	font-weight: bold;
-}
 .style19 {	color: #990000;
 	font-weight: bold;
 }
@@ -29,55 +25,60 @@
 	color: #FF0000;
 	font-weight: bold;
 }
+.style21 {color: #990000}
+.style30 {color: #003399}
 -->
 </style>
 </head>
 
 <body>
 <div align="center"></p>
-  <img src="1692313410864.jpg" width="1036" height="471"></div>
-<p align="left"><font size="5"><b><i>
-<marquee scrolldelay="0" width="522" direction="right"></marquee><font color="#00FF00"><marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-</marquee>
-</font></i></b>
-    <font color="#00FF00">
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate"></marquee></font><font size="5" class="style32 style18">FEDERAL POLYTECHNIC, BIDA
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
-    </marquee>
-    </font></font></p>
-
-<hr align="left" color="#FF0000" style="color: #FF0000">
-<p align="center"><span class="style13"><span class="style16"><a href="about.html">A</a></span></span><span class="style16"><a href="about.html">BOUT US</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="courses.html">COURSES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;&nbsp; &nbsp;
-      <a href="prog.html">PROGRAMMES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="regi.html">REGISTRATION</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="tuition.html">TUITION FEES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="portal.html"> PORTAL&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></span></p>
-<div id="welcome">
-  <p class="style13"><span class="style16"><font size="5"><em>
-    <marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-    </marquee>
-  </em></font>    
-  </span>
-  <table width="715" border="0">
-    <tr>
-      <td><p class="style13"><span class="style20">Vision Statement</span>
-        <p align="left" class="style13">A leading Polytechnic with enviable and  excellent academic standard, training students to be technologically skilled,  morally sound and entrepreneurial.<br>
-        <p align="left" class="style13"></td>
-      <td rowspan="2"><img src="1692313410830.jpg" width="180" height="180"></td>
-    </tr>
-    <tr>
-      <td><p align="left" class="style13"><span class="style20">Mission Statement </span>
-        <p>To build an enabling campus environment and  train students in technology and management through the earned &lsquo;Bida Standard&rsquo;  for sustainable development.</p></td>
-    </tr>
+  <img src="1692313410864.jpg" width="1036" height="471"><font size="5"><b>
+  </font></div>
+<font size="5"><table width="1038" border="0">
+  <tr>
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
+        <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................<span class="style30"><em>Technology For Development</em></span></strong>
+        </marquee>
+    </span></td>
+  </tr>
   </table>
-  <p class="style13">
-</div>
+  </font>
+<hr align="left" color="#FF0000" style="color: #FF0000">
+<table width="887" height="24" border="0" align="center">
+  <tr>
+    <td><span class="style13"><span class="style16"><a href="about.html">A</a></span></span><span class="style16"><a href="about.html">BOUT US</a></span></td>
+    <td><span class="style16"> <a href="courses.html">COURSES</a></span></td>
+    <td><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;</span></td>
+    <td><span class="style16">&nbsp; &nbsp; <a href="prog.html">PROGRAMMES</a>&nbsp;</span></td>
+    <td><span class="style16"> <a href="regi.html">REGISTRATION</a></span></td>
+    <td><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="tuition.html">TUITION FEES</a></span></td>
+    <td><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp;<a href="portal.html"> PORTAL&nbsp;&nbsp;&nbsp;&nbsp;</a></span></td>
+  </tr>
+</table></br>
+<table width="875" border="0" align="center">
+  <tr>
+    <td width="562"><p class="style13"><span class="style20">Vision Statement</span>
+      <p align="left" class="style13">A leading Polytechnic with enviable and  excellent academic standard, training students to be technologically skilled,  morally sound and entrepreneurial.<br>
+      
+      <p align="left" class="style13"><span class="style20">Mission Statement </span>
+    <p>To build an enabling campus environment and  train students in technology and management through the earned &lsquo;Bida Standard&rsquo;  for sustainable development.</p></td>
+    <td width="316"><div align="center"><img src="1692313410830.jpg" width="282" height="262" align="top"></div></td>
+  </tr>
+</table>
+<p align="center"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
 <span class="style15"><span class="style3"><span class="style4"><span class="style1"><b>
 <footer>
 		</span>
 <hr color="#FF0000" style="color: #660000">
-<div align="center"><span style="color: #000000"><i><b> </span><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span> </span></div>
+<div align="center"><span style="color: #000000"><i><b> </span>
+  <table width="1012" height="35" border="0">
+    <tr>
+      <td width="1002" bgcolor="#999900"><div align="center"><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span></span></div></td>
+    </tr>
+  </table>
+</div>
 <hr color="#FF0000" style="color: #660000">
 </body>
 
