--- a/prog.html
+++ b/prog.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>Programmes Page</title>
 <bgsound src="../../Music/apala%20copy%20of%20musili.mp3" loop="-1">
 <meta name="Microsoft Theme" content="sonora 1011">
 <link href="../uni.web/css1.css" rel="stylesheet" type="text/css">
@@ -18,14 +18,12 @@
 	font-size: 12px;
 	font-style: italic;
 }
-.style18 {
-	color: #CC0000;
-	font-weight: bold;
-}
 .style19 {	color: #990000;
 	font-weight: bold;
 }
 .style22 {color: #990033; font-weight: bold; }
+.style23 {color: #990000}
+.style24 {color: #003399}
 -->
 </style>
 </head>
@@ -33,45 +31,56 @@
 <body>
 <div align="center"></p>
   <img src="1692313410864.jpg" width="1036" height="471"></div>
-<p align="left"><font size="5"><b><i>
-<marquee scrolldelay="0" width="522" direction="right"></marquee><font color="#00FF00"><marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-</marquee>
-</font></i></b>
-    <font color="#00FF00">
-    <em>
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate"></marquee></em></font><font size="5" class="style32 style18">FEDERAL POLYTECHNIC, BIDA
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
-    </marquee>
-    </font></font></p>
-
-<hr color="#FF0000" style="color: #FF0000">
-<p align="center"><span class="style13"><span class="style16"><a href="about.html">ABOUT US</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="courses.html">COURSES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;&nbsp; &nbsp;
-      <a href="prog.html">PROGRAMMES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="regi.html">REGISTRATION</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="tuition.html">TUITION FEES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="portal.html">
-      PORTAL&nbsp;&nbsp;&nbsp;</a></span><a href="portal.html">&nbsp;&nbsp;</a></span></p>
-<div id="welcome">
-  <p align="left" class="style13"><font size="5"><em>
-    <marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-    </marquee>
-  </em></font>  
-  <table width="706" height="298" border="0">
+<font size="5"><table width="1038" border="0">
+  <tr>
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><span class="style23"><i>
+          <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................</strong>
+          </marquee>
+    </span>
+        <span class="style24">
+        <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+        <strong><em>Technology For Development</em></strong>
+        </marquee>
+        </span>
+    </span></td>
+  </tr>
+  </table>
+</font>
+<hr align="left" color="#FF0000" style="color: #FF0000">
+<table width="941" height="21" border="0" align="center">
+  <tr>
+    <td width="86"><span class="style13"><span class="style16"><a href="about.html">A</a></span></span><span class="style16"><a href="about.html">BOUT US</a></span></td>
+    <td width="81"><span class="style16"> <a href="courses.html">COURSES</a></span></td>
+    <td width="145"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;</span></td>
+    <td width="142"><span class="style16">&nbsp; &nbsp; <a href="prog.html">PROGRAMMES</a>&nbsp;</span></td>
+    <td width="127"><span class="style16"> <a href="regi.html">REGISTRATION</a></span></td>
+    <td width="137"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="tuition.html">TUITION FEES</a></span></td>
+    <td width="106"><span class="style16"><a href="portal.html">PORTAL&nbsp;</a></span><a href="portal.html">&nbsp;&nbsp;&nbsp;</a></td>
+    <td width="83"><span class="style16"><a href="index.html">&nbsp;&nbsp;HOME&nbsp;&nbsp;</a></span></td>
+  </tr>
+</table>
+</br> 
+  <table width="706" height="241" border="0" align="center">
     <tr>
-      <td rowspan="2"><img src="1692313410830.jpg" width="199" height="213"></td>
-      <td height="110"><span class="style22">UNDER-GRADUATE PROGRAMME </span></td>
+      <td rowspan="2"><img src="1692313410830.jpg" width="236" height="228"></td>
+      <td height="72"><span class="style22">UNDER-GRADUATE PROGRAMME </span></td>
     </tr>
     <tr>
       <td><span class="style22">POST-GRADUATE PROGRAMME </span></td>
     </tr>
-  </table>
+</table>
 </div>
 <span class="style15"><span class="style3"><span class="style4"><span class="style1"><b>
 <footer>
 		</span>
 <hr color="#FF0000" style="color: #660000">
-<div align="center"><span style="color: #000000"><i><b> </span><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span> </span>
+<div align="center"><span style="color: #000000"><i><b> </span>
+  <table width="1012" height="35" border="0">
+    <tr>
+      <td width="1002" bgcolor="#999900"><div align="center"><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span></span></div></td>
+    </tr>
+  </table>
 </div>
 <hr color="#FF0000" style="color: #660000">
 </body>
