--- a/tuition.html
+++ b/tuition.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>Tuition page</title>
 <bgsound src="../../Music/apala%20copy%20of%20musili.mp3" loop="-1">
 <meta name="Microsoft Theme" content="sonora 1011">
 <link href="../uni.web/css1.css" rel="stylesheet" type="text/css">
@@ -14,18 +14,22 @@
 	font-size: 12px;
 	font-style: italic;
 }
-.style18 {
-	color: #CC0000;
-	font-weight: bold;
-}
 .style19 {	color: #990000;
 	font-weight: bold;
 }
 .style21 {color: #009933}
-.style25 {color: #990000; font-weight: bold; font-size: 12px; }
 .style26 {
 	font-size: 16px;
-	color: #00CC99;
+	color: #33CC00;
+}
+.style27 {color: #990000}
+.style28 {
+	color: #660000;
+	font-weight: bold;
+}
+.style29 {color: #003399}
+.style16 {	font-weight: bold;
+	font-size: 12px;
 }
 -->
 </style>
@@ -34,57 +38,66 @@
 <body>
 <div align="center"></p>
   <img src="1692313410864.jpg" width="1036" height="471"></div>
-<p align="left"><font size="5"><b><i>
-<marquee scrolldelay="0" width="522" direction="right"></marquee><font color="#00FF00"><marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-</marquee>
-</font></i></b>
-    <font color="#00FF00">
-    <em>
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate"></marquee></em></font><font size="5" class="style32 style18">FEDERAL POLYTECHNIC, BIDA
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
-    </marquee>
-    </font></font></p>
-
-<hr color="#FF0000" style="color: #FF0000">
-<p align="center" class="style25"><span class="style16"><strong><a href="about.html"><em>AB</em></a></strong></span><em><strong><a href="about.html">OUT US</a>&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="courses.html">COURSES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;&nbsp; &nbsp;
-      <a href="prog.html">PROGRAMMES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="regi.html"> REGISTRATION&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="portal.html">
-      PORTAL</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong>	<a href="index.html"><strong>HOME&nbsp;&nbsp;</strong></a>&nbsp;&nbsp;</em>&nbsp;&nbsp;&nbsp;
-<div id="welcome">
-  <p align="left" class="style13"><font size="5"><em>
-    <marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-    </marquee>
-  </em></font>
-  
-  <table width="608" height="101" border="0">
-    <tr>
-      <td><p class="style21">APPROVED REGISTRATION FEES FOR 2021/2022  SESSION </p>
-        <p class="style26">OTHER FEES PAYABLE WHEN APPLICABLE </p>
-      <p>(1) Late Registration Penalty  &ndash;&nbsp;N&nbsp;5,000&nbsp;</p>        
-      <p>(2) Review of examination scripts  &ndash;&nbsp;N&nbsp;5000&nbsp;per course </p>
-      <p>(3) Academic transcript&nbsp;&ndash;&nbsp;N10,  000&nbsp;outside Nigeria</p>
-      <p>(4) Academic transcript &ndash;&nbsp;N8,  000&nbsp;within Nigeria </p>
-      <p>(5) Issuance for certificate &ndash;&nbsp;N15,  000&nbsp;per certificate </p>
-      <p>(6) Add and Drop of courses form &ndash;&nbsp;N1,  000</p>
-      <p>(7) Appeal against Academic Board decisions  &ndash;&nbsp;N5,000 </p>
-      <p>(8)Hostel Accommodation  &ndash;&nbsp;N10,000,&nbsp;N12,000,&nbsp;N15,000&nbsp;(Depending on the room  allocated)</p>
-      <p>(9) SUG dues-&nbsp;N&nbsp;600&nbsp;</p>
-      <p>(10) Change of option/change of course  &ndash;&nbsp;N&nbsp;2,000 </p>
-      <p>(11) Misplacement of password  &ndash;&nbsp;N&nbsp;1,000 </p>
-      <p>(12) legacy fees &ndash;&nbsp;N&nbsp;3,000 </p>
-      <p>(13) Regularization Administration fee  &ndash;&nbsp;N&nbsp;3,000</p>
-      <p>(14) SIWES for management students  &ndash;&nbsp;N&nbsp;5,000</p>
-      <p>(15) Acceptance fee &ndash;N10,000&nbsp;</p></td>
-    </tr>
+<font size="5"><table width="1038" border="0">
+  <tr>
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
+      <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+        <strong><span class="style27">FEDERAL POLYTECHNIC, BIDA .........................................................................</span><span class="style30 style29"><em>Technology For Development</em></span></strong>
+      </marquee>
+    </span></td>
+  </tr>
   </table>
-  <p align="left" class="style13">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-</div>
+</font>
+<hr align="left" color="#FF0000" style="color: #FF0000">
+<table width="941" height="21" border="0" align="center">
+  <tr>
+    <td width="86"><span class="style13"><span class="style16"><a href="about.html">A</a></span></span><span class="style16"><a href="about.html">BOUT US</a></span></td>
+    <td width="81"><span class="style16"> <a href="courses.html">COURSES</a></span></td>
+    <td width="145"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;</span></td>
+    <td width="142"><span class="style16">&nbsp; &nbsp; <a href="prog.html">PROGRAMMES</a>&nbsp;</span></td>
+    <td width="127"><span class="style16"> <a href="regi.html">REGISTRATION</a></span></td>
+    <td width="137"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="tuition.html">TUITION FEES</a></span></td>
+    <td width="106"><span class="style16"><a href="portal.html">PORTAL&nbsp;</a></span><a href="portal.html">&nbsp;&nbsp;&nbsp;</a></td>
+    <td width="83"><span class="style16">&nbsp;&nbsp;<a href="index.html">HOME</a>&nbsp;&nbsp;<a href="portal.html"></a></span></td>
+  </tr>
+</table>
+</br>
+<table width="861" height="27" border="0" align="center">
+  <tr>
+    <td width="641"><table width="641" height="101" border="0">
+      <tr>
+        <td width="635"><p class="style28">APPROVED REGISTRATION FEES FOR 2022/2023  SESSION </p>
+            <p class="style26">OTHER FEES PAYABLE WHEN APPLICABLE </p>
+          <p>(1) Late Registration Penalty  &ndash;&nbsp;N&nbsp;5,000&nbsp;</p>
+          <p>(2) Review of examination scripts  &ndash;&nbsp;N&nbsp;5000&nbsp;per course </p>
+          <p>(3) Academic transcript&nbsp;&ndash;&nbsp;N10,  000&nbsp;outside Nigeria</p>
+          <p>(4) Academic transcript &ndash;&nbsp;N8,  000&nbsp;within Nigeria </p>
+          <p>(5) Issuance for certificate &ndash;&nbsp;N15,  000&nbsp;per certificate </p>
+          <p>(6) Add and Drop of courses form &ndash;&nbsp;N1,  000</p>
+          <p>(7) Appeal against Academic Board decisions  &ndash;&nbsp;N5,000 </p>
+          <p>(8)Hostel Accommodation  &ndash;&nbsp;N10,000,&nbsp;N12,000,&nbsp;N15,000&nbsp;(Depending on the room  allocated)</p>
+          <p>(9) SUG dues-&nbsp;N&nbsp;600&nbsp;</p>
+          <p>(10) Change of option/change of course  &ndash;&nbsp;N&nbsp;2,000 </p>
+          <p>(11) Misplacement of password  &ndash;&nbsp;N&nbsp;1,000 </p>
+          <p>(12) legacy fees &ndash;&nbsp;N&nbsp;3,000 </p>
+          <p>(13) Regularization Administration fee  &ndash;&nbsp;N&nbsp;3,000</p>
+          <p>(14) SIWES for management students  &ndash;&nbsp;N&nbsp;5,000</p>
+          <p>(15) Acceptance fee &ndash;N10,000&nbsp;</p></td>
+      </tr>
+    </table></td>
+    <td width="210">&nbsp;</td>
+  </tr>
+</table>
 <span class="style15"><span class="style3"><span class="style4"><span class="style1"><b>
 <footer>
 		</span>
 <hr color="#FF0000" style="color: #660000">
-<div align="center"><span style="color: #000000"><i><b> </span><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span> </span>
+<div align="center"><span style="color: #000000"><i><b> </span>
+  <table width="1012" height="35" border="0">
+    <tr>
+      <td width="1002" bgcolor="#999900"><div align="center"><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span></span></div></td>
+    </tr>
+  </table>
 </div>
 <hr color="#FF0000" style="color: #660000">
 </body>
