--- a/regi.html
+++ b/regi.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>Registration Page</title>
 <bgsound src="../../Music/apala%20copy%20of%20musili.mp3" loop="-1">
 <meta name="Microsoft Theme" content="sonora 1011">
 <link href="../uni.web/css1.css" rel="stylesheet" type="text/css">
@@ -14,18 +14,18 @@
 	font-size: 12px;
 	font-style: italic;
 }
-.style18 {
-	color: #CC0000;
-	font-weight: bold;
-}
 .style19 {	color: #990000;
 	font-weight: bold;
 }
-.style22 {color: #FF0000; font-weight: bold; font-size: 12px; }
 .style23 {
 	color: #FF0000;
 	font-weight: bold;
 }
+.style24 {color: #990000}
+.style16 {	font-weight: bold;
+	font-size: 12px;
+}
+.style25 {color: #003399}
 -->
 </style>
 </head>
@@ -33,28 +33,35 @@
 <body>
 <div align="center"></p>
   <img src="1692313410864.jpg" width="1036" height="471"></div>
-<p align="left"><font size="5"><b><i>
-<marquee scrolldelay="0" width="522" direction="right"></marquee><font color="#00FF00"><marquee scrolldelay="3" width="249" direction="right" behavior="alternate">
-</marquee>
-</font></i></b>
-    <font color="#00FF00">
-    <em>
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate"></marquee></em></font><font size="5" class="style32 style18">FEDERAL POLYTECHNIC, BIDA
-    <marquee scrolldelay="0" width="500" direction="right" behavior="alternate">
-    </marquee>
-    </font></font></p>
-
-<hr color="#FF0000" style="color: #FF0000">
-<p align="center"><span class="style13">
-  <span class="style22"><a href="about.html">ABOUT US</a>&nbsp; &nbsp;&nbsp; &nbsp;
-  <a href="courses.html">&nbsp;COURSES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="contact.html">CONTACT US </a>&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="prog.html">PROGRAMMES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="tuition.html">TUITION FEES</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="tuition.html">PORTAL </a>&nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="tuition.html">HOME</a>&nbsp;</span><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp;</span></p>
+<font size="5"><table width="1038" border="0">
+  <tr>
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><span class="style24"><i>
+          <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................</strong>
+      </marquee>
+    </span>
+      <marquee scrolldelay="0" width="1000" direction="right" behavior="end"><strong><span class="style30 style25"><em>Technology For Development</em></span></strong>
+      </marquee>
+    </span></td>
+  </tr>
+  </table>
+</font>
+<hr align="left" color="#FF0000" style="color: #FF0000">
+<table width="941" height="21" border="0" align="center">
+  <tr>
+    <td width="86"><span class="style13"><span class="style16"><a href="about.html">A</a></span></span><span class="style16"><a href="about.html">BOUT US</a></span></td>
+    <td width="81"><span class="style16"> <a href="courses.html">COURSES</a></span></td>
+    <td width="145"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="contact.html">CONTACT US &nbsp;</a>&nbsp;</span></td>
+    <td width="142"><span class="style16">&nbsp; &nbsp; <a href="prog.html">PROGRAMMES</a>&nbsp;</span></td>
+    <td width="127"><span class="style16"> <a href="regi.html">REGISTRATION</a></span></td>
+    <td width="137"><span class="style16">&nbsp;&nbsp;&nbsp;&nbsp; <a href="tuition.html">TUITION FEES</a></span></td>
+    <td width="106"><span class="style16"><a href="portal.html">PORTAL&nbsp;</a></span><a href="portal.html">&nbsp;&nbsp;&nbsp;</a></td>
+    <td width="83"><span class="style16">&nbsp;&nbsp;<a href="index.html">HOME&nbsp;</a>&nbsp;</span></td>
+  </tr>
+</table>
+</br>
 <div id="welcome">
-  <table width="851" height="288" border="0" align="center">
+  <table width="851" border="0" align="center">
     <tr>
       <td width="417"><p class="style23">REQUIREMENTS</p>
         <p><br>
@@ -67,7 +74,12 @@
 <footer>
 		</span>
 <hr color="#FF0000" style="color: #660000">
-<div align="center"><span style="color: #000000"><i><b> </span><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span> </span>
+<div align="center"><span style="color: #000000"><i><b> </span>
+  <table width="1012" height="35" border="0">
+    <tr>
+      <td width="1002" bgcolor="#999900"><div align="center"><span class="style19">FEDPOLYBIDA&copy; 2023 All Rights  Reserved | Powered by <span class="style17">HAUA HOPE SHEHU</span></span></div></td>
+    </tr>
+  </table>
 </div>
 <hr color="#FF0000" style="color: #660000">
 </body>
