--- a/about.html
+++ b/about.html
@@ -41,19 +41,12 @@
   <img src="1692313410864.jpg" width="1036" height="471"></div>
 <font size="5"><table width="1038" border="0">
   <tr>
-    <td bgcolor="#999900"><h1>
-      <span class="style27"><span class="style21"><font size="5"><i>
+  <tr>
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
         <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-          <strong>FEDERAL POLYTECHNIC, BIDA</strong>
+          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................<span class="style30"><em>Technology For Development</em></span></strong>
         </marquee>
-        <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-        <strong> .........................................................................</strong>
-      </marquee>
-      </span><span class="style21 style28">
-      <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-      <strong><em>Technology For Development</em></strong>
-      </marquee>
-      </span></td>
+    </span></td>
   </tr>
   </table>
 </font>
