--- a/prog.html
+++ b/prog.html
@@ -33,16 +33,10 @@
   <img src="1692313410864.jpg" width="1036" height="471"></div>
 <font size="5"><table width="1038" border="0">
   <tr>
-    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><span class="style23"><i>
-          <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................</strong>
-          </marquee>
-    </span>
-        <span class="style24">
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
         <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-        <strong><em>Technology For Development</em></strong>
+          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................<span class="style30"><em>Technology For Development</em></span></strong>
         </marquee>
-        </span>
     </span></td>
   </tr>
   </table>
