--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
   <tr>
     <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
         <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................<span class="style30"><em>Technology For Development</em></span></strong>
+          <strong>FEDERAL POLYTECHNIC, BIDA .............................................................<span class="style30"><em>Technology For Development</em></span></strong>
         </marquee>
     </span></td>
   </tr>
