--- a/regi.html
+++ b/regi.html
@@ -35,13 +35,10 @@
   <img src="1692313410864.jpg" width="1036" height="471"></div>
 <font size="5"><table width="1038" border="0">
   <tr>
-    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><span class="style24"><i>
-          <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................</strong>
-      </marquee>
-    </span>
-      <marquee scrolldelay="0" width="1000" direction="right" behavior="end"><strong><span class="style30 style25"><em>Technology For Development</em></span></strong>
-      </marquee>
+    <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
+        <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................<span class="style30"><em>Technology For Development</em></span></strong>
+        </marquee>
     </span></td>
   </tr>
   </table>
