--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>New Page 1</title>
+<title>About Us Page</title>
 <bgsound src="../../Music/apala%20copy%20of%20musili.mp3" loop="-1">
 <meta name="Microsoft Theme" content="sonora 1011">
 <link href="../uni.web/css1.css" rel="stylesheet" type="text/css">
