--- a/about.html
+++ b/about.html
@@ -42,9 +42,9 @@
 <font size="5"><table width="1038" border="0">
   <tr>
     <td bgcolor="#999900"><h1><span class="style21"><font size="5"><span class="style21"><i>
-        <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
-          <strong>FEDERAL POLYTECHNIC, BIDA .........................................................................<span class="style30"><em>Technology For Development</em></span></strong>
-        </marquee>
+      <marquee scrolldelay="0" width="1000" direction="right" behavior="end">
+        <strong><span class="style25">FEDERAL POLYTECHNIC, BIDA .........................................................................</span><span class="style30 style26"><em>Technology For Development</em></span></strong>
+      </marquee>
     </span></td>
   </tr>
   </table>
